@@ -1,18 +1,0 @@
-<configuration>
-
-	<components>
-
-		<component id="comp1" 
-			type="Castle.Windsor.Tests.ModelBuilders.Component1, Castle.Windsor.Tests">
-			
-			<methods>
-				<save myattribute="1" />
-				<save signature="System.String, mscorlib" myattribute="2" />
-				<save signature="System.String, mscorlib;System.String, mscorlib" myattribute="3" />
-			</methods>
-			
-		</component>
-
-	</components>
-
-</configuration>
